--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #850101 !important; /* Indigo */
+  background-color: #800020 !important; /* Indigo */
 }
 
 .navbar a {
@@ -7,6 +7,15 @@
 }
 
 body {
-  background-color: #ff7276;
+  background-color: #FFF2D7;
 }
 
+.lightning-round {
+  background-color: #007bff;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.grid-4x4 {
+  grid-template-columns: repeat(4, 200px);
+  gap: 18px;
+}
