--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark  ">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
-        <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="Logo" width="30" height="30" class="d-inline-block align-text-top me-2">
+        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo" width="30" height="30" class="d-inline-block align-text-top me-2">
         Bean & Brew
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -30,6 +30,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('aarongame') }}">Aaron game</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('coffee_page') }}">coffee</a>
 
             </li>
           </ul>
